[java-incomplete-model] Move IncompleteModelUtil to java-psi-impl
GitOrigin-RevId: 41d51684cd2c2f11cb955c05a13cc273fc99e5b5